# cataract-doc-study

./: .gitignore  docs.json  doctor_question_set.json  pilot_docs.json  pilot_doctor_question_set.json  pilot_questions.json  pilot_surevy_questions.json  pilot_survey_doctor_question_set.json  pilot_survey_doctors.json  pyproject.toml  requirements.txt  start.sh
cataract_doc_study/: apis.py  app.py  dependency_setup.py  generate_question_set.ipynb
cataract_doc_study/actions/: login.py  submit.py  update_answer.py
cataract_doc_study/core/: database.py  llm.py
cataract_doc_study/data/: cat_ques.csv  doctor.csv
cataract_doc_study/doctors_and_questions/: docs.json  doctor_question_set1.json  doctor_question_set2.json  questions.json
cataract_doc_study/frontend/: README.md  package.json
cataract_doc_study/frontend/public/: index.html  manifest.json
cataract_doc_study/frontend/src/: App.js
cataract_doc_study/frontend/src/components/: DoctorLogin.js  FormHomePage.js  ProgressBar.js  Timer.js
cataract_doc_study/frontend/src/data/: docs.json  questions.json
cataract_doc_study/frontend/src/utils/: ActivityTracker.js  FlagProvider.js  QuestionProvider.js
cataract_doc_study/frontend_compiled/: asset-manifest.json  index.html
cataract_doc_study/frontend_compiled/static/js/: 453.cc2e5cf2.chunk.js  main.00d86278.js  (+40 more)
cataract_doc_study/models/: load.py  submit.py  update_answer.py
cataract_doc_study/scripts/: debug_diff.ipynb  generate_pilot_question_set.ipynb  generate_question_set.ipynb  response_analysis.ipynb  response_dump.ipynb  upload_question_set.ipynb
(+6 files in other folders)
